At a good stopping point for About page and Portfolio page

--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,15 @@ h1 {
     border-bottom: 1px solid gray;
 }
 
+hr {
+    margin: 20px 0;
+}
+
+/* Nav Changes */
+#nav-container {
+    background: #212529;
+}
+
 /* About page */
 
 #about-col {
