--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,7 @@ hr {
     position: relative;
     background: #FFA69E;
     width: 100%;
+    border-radius: 3px;
 }
 
 .single-project-container figure img {
@@ -44,6 +45,7 @@ hr {
     opacity: 1;
     transition: opacity 300ms ease;
     line-height: 100%;
+    border-radius: 3px;
 }
 
 .single-project-container figure figcaption {
@@ -70,7 +72,7 @@ hr {
 }
 
 .single-project-container:hover figure img {
-    opacity: 0.6;
+    opacity: 0.3;
 }
 
 .single-project-container:hover figure figcaption p {
@@ -118,16 +120,6 @@ hr {
 }
 
 @media screen and (max-width: 576px) {
-    /* .single-project-mobile-desc {
-        display: block;
-    }
-    .single-project-container figure figcaption {
-        visibility: hidden;
-    }
-    .single-project-container figure {
-        margin-bottom: 16px !important;
-    } */
-
     .single-project-container {
         background: none;
     }
@@ -148,5 +140,6 @@ hr {
         margin-bottom: 3px;
         text-align: left;
         color: #212529;
-    } 
+        text-decoration: none !important;
+    }  
 }
