Added sticky footer configuration

--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,23 @@
     margin-right: auto;
 }
 
+/* Sticky Footer based off of CSS-Tricks article*/
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+}
+
+.footer {
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
 /* General */
 
 body {
