Added general changes to the verbiage of the entire site. Added hover effects to the linkedin and behance icons on contact page.

--- a/style/style.css
+++ b/style/style.css
@@ -118,6 +118,12 @@ hr {
     height: auto;
 }
 
+/* Contact */
+
+.social-icon {
+    transition: all 300ms ease;
+}
+
 /* Footer */
 
 #page-content {
